--- a/index.html
+++ b/index.html
@@ -1,121 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Momentos Especiales</title>
-<style>
-    :root {
-        --color-primario: #ff6f61;
-        --color-secundario: #ffd166;
-        --color-fondo: #fffaf0;
-        --color-texto: #333;
-    }
-
-    body {
-        margin: 0;
-        font-family: 'Segoe UI', sans-serif;
-        background: var(--color-fondo);
-        color: var(--color-texto);
-    }
-
-    header {
-        background: var(--color-primario);
-        color: white;
-        text-align: center;
-        padding: 1rem 0;
-        font-size: 1.8rem;
-        font-weight: bold;
-        letter-spacing: 1px;
-    }
-
-    nav {
-        background: var(--color-secundario);
-        padding: 0.5rem;
-        text-align: center;
-    }
-
-    nav a {
-        text-decoration: none;
-        color: #333;
-        margin: 0 15px;
-        font-weight: bold;
-        transition: color 0.3s;
-    }
-
-    nav a:hover {
-        color: var(--color-primario);
-    }
-
-    /* Galería */
-    .gallery {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 15px;
-        padding: 1.5rem;
-    }
-
-    .gallery img {
-        width: 100%;
-        border-radius: 12px;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        transition: transform 0.2s;
-    }
-
-    .gallery img:hover {
-        transform: scale(1.05);
-    }
-
-    /* Historias */
-    .story {
-        max-width: 800px;
-        margin: 2rem auto;
-        background: white;
-        padding: 1.5rem;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        line-height: 1.6;
-    }
-
-    .story h2 {
-        color: var(--color-primario);
-        margin-bottom: 1rem;
-    }
-
-    footer {
-        text-align: center;
-        padding: 1rem;
-        background: var(--color-secundario);
-        font-size: 0.9rem;
-        color: #555;
-        margin-top: 2rem;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Momentos Especiales</title>
+    <!-- Enlace al CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<header>🌟 Momentos Especiales 🌟</header>
+    <header>🌟 Momentos Especiales 🌟</header>
 
-<nav>
-    <a href="#fotos">Fotos</a>
-    <a href="#historias">Historias</a>
-</nav>
+    <nav>
+        <a href="#fotos">Fotos</a>
+        <a href="#historias">Historias</a>
+    </nav>
 
-<section id="fotos" class="gallery">
-    <img src="img/foto1.jpg" alt="Foto 1">
-    <img src="img/foto2.jpg" alt="Foto 2">
-    <img src="img/foto3.jpg" alt="Foto 3">
-    <img src="img/foto4.jpg" alt="Foto 4">
-</section>
+    <section id="fotos" class="gallery">
+        <img src="img/foto1.jpg" alt="Foto 1">
+        <img src="img/foto2.jpg" alt="Foto 2">
+        <img src="img/foto3.jpg" alt="Foto 3">
+    </section>
 
-<section id="historias" class="story">
-    <h2>Un día para recordar</h2>
-    <p>Fue una tarde increíble llena de risas, buena comida y la mejor compañía. Compartimos historias antiguas y creamos recuerdos nuevos que siempre llevaremos en el corazón. 💖</p>
-</section>
+    <section id="historias" class="story">
+        <h2>Un día para recordar</h2>
+        <p>Fue una tarde increíble llena de risas, buena comida y la mejor compañía. 💖</p>
+    </section>
 
-<footer>
-    © 2025 - Mi Rincón Familiar | Hecho con 💛
-</footer>
+    <footer>
+        © 2025 - Mi Rincón Familiar | Hecho con 💛
+    </footer>
 
+    <!-- Enlace al JS (si lo usamos después) -->
+    <script src="js/script.js"></script>
 </body>
 </html>
