--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ff6f61"> <!-- Color de la barra en móviles -->
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <title>Momentos Especiales</title>
     <!-- Enlace al CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -20,6 +22,7 @@
         <img src="img/foto1.jpg" alt="Foto 1">
         <img src="img/foto2.jpg" alt="Foto 2">
         <img src="img/foto3.jpg" alt="Foto 3">
+        <img src="img/foto4.jpg" alt="Foto 4">
     </section>
 
     <section id="historias" class="story">
