cambios menores en imagenes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
 
     <footer>
-        © 2025 - Mi Rincón Familiar | Hecho con 💛
+        © 2025 - Mi Rincón en la Web | Hecho con ❤️ por dany Hertiz
     </footer>
 
     <!-- Enlace al JS (si lo usamos después) -->
