cambios dediseño, de menú y de contenido

--- a/index.html
+++ b/index.html
@@ -5,29 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ff6f61"> <!-- Color de la barra en móviles -->
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <title>Momentos Especiales</title>
+    <title>Mi rincón en la Web</title>
     <!-- Enlace al CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <header>🌟 Momentos Especiales 🌟</header>
+    <header>🌐 Mi rincón en la Web 🌐</header>
 
     <nav>
-        <a href="#fotos">Fotos</a>
+        <a href="index.html">Inicio</a>
         <a href="#historias">Historias</a>
+        <a href="#galeria">Galería</a>
+        <a href="#sobremi">Sobre Mí</a>
     </nav>
+
+    <section id="historias" class="story">
+        <h2>Dany Hertiz</h2>
+        <p>Dediqué parte de mi tiempo libre para crear está página con un dóble propósito. 
+            Compartir todo tipo de historias y anécdotas, acompañadas de imágenes y videos, 
+            de manera que pueda compartirlos con amigos y familiares, 
+            al tiempo que continúo aprendiendo HTML, CSS y Javascript.</p>
+    </section>
 
     <section id="fotos" class="gallery">
         <img src="img/foto1.jpg" alt="Foto 1">
         <img src="img/foto2.jpg" alt="Foto 2">
         <img src="img/foto3.jpg" alt="Foto 3">
         <img src="img/foto4.jpg" alt="Foto 4">
-    </section>
-
-    <section id="historias" class="story">
-        <h2>Un día para recordar</h2>
-        <p>Fue una tarde increíble llena de risas, buena comida y la mejor compañía. 💖</p>
     </section>
 
     <footer>
