cambios en la redacción

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section id="historias" class="story">
         <h2>Dany Hertiz</h2>
-        <p>Dediqué parte de mi tiempo libre para crear está página con un dóble propósito. 
+        <p>Dediqué parte de mi tiempo libre para crear esta página, con un dóble propósito. 
             Compartir todo tipo de historias y anécdotas, acompañadas de imágenes y videos, 
             de manera que pueda compartirlos con amigos y familiares, 
             al tiempo que continúo aprendiendo HTML, CSS y Javascript.</p>
